--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 </head>
 <body>
 
-    <main>
-        <div id="app">
+    <main id="app">
             <div class="container-fluid p-5">
                 <div class="row text-center">
                     <div class="col-12 p-3" id="my-before-carousel">
@@ -65,7 +64,6 @@
     
                 </div>
             </div>
-        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
